terraform/envs/aws-eks/k8s/custom-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-app
  namespace: custom-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: custom-app
  template:
    metadata:
      labels:
        app: custom-app
    spec:
      serviceAccountName: custom-app
      containers:
        - name: app
          image: 661515655645.dkr.ecr.us-east-1.amazonaws.com/infra-lab-dev-app:v6
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
