terraform/envs/aws-eks/k8s/custom-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-app
  namespace: custom-app
spec:
  selector:
    app: custom-app
  ports:
    - port: 80
      targetPort: 8080
